--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^2.3.0",
     "@aws-sdk/client-s3": "^3.758.0",
     "lucide-react": "^0.483.0",
     "react": "^19.0.0",
