--- a/package.json
+++ b/package.json
@@ -29,9 +29,16 @@
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
+    "eslint-plugin-react": "^7.0.0",
     "globals": "^15.15.0",
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.17",
-    "vite": "^6.2.0"
-  }
+    "vite": "^6.2.0",
+    "prettier": "^3.0.0",
+    "typescript": "^5.0.0",
+    "jest": "^29.0.0",
+    "ts-jest": "^29.0.0",
+    "depcheck": "^1.4.3",
+    "ts-prune": "^0.10.0"
+    }
 }
