--- a/package.json
+++ b/package.json
@@ -7,7 +7,12 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "check:lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "check:format": "prettier . --check",
+    "check:types": "tsc --noEmit",
+    "check:unused": "ts-prune && depcheck",
+    "test": "jest --ci"
   },
   "dependencies": {
     "@auth0/auth0-react": "^2.3.0",
@@ -22,23 +27,26 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@types/jest": "^29.5.14",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.21",
+    "depcheck": "^1.4.3",
     "eslint": "^9.21.0",
+    "eslint-config-prettier": "^10.1.2",
+    "eslint-plugin-react": "^7.0.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
-    "eslint-plugin-react": "^7.0.0",
+    "eslint-plugin-tsdoc": "^0.4.0",
     "globals": "^15.15.0",
-    "postcss": "^8.5.3",
-    "tailwindcss": "^3.4.17",
-    "vite": "^6.2.0",
-    "prettier": "^3.0.0",
-    "typescript": "^5.0.0",
     "jest": "^29.0.0",
+    "postcss": "^8.5.3",
+    "prettier": "^3.0.0",
+    "tailwindcss": "^3.4.17",
     "ts-jest": "^29.0.0",
-    "depcheck": "^1.4.3",
-    "ts-prune": "^0.10.0"
-    }
+    "ts-prune": "^0.10.0",
+    "typescript": "^5.0.0",
+    "vite": "^6.2.0"
+  }
 }
