--- a/package.json
+++ b/package.json
@@ -16,35 +16,23 @@
   },
   "dependencies": {
     "@auth0/auth0-react": "^2.3.0",
-    "@aws-sdk/client-s3": "^3.758.0",
-    "@aws-sdk/client-secrets-manager": "^3.799.0",
     "lucide-react": "^0.483.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
-    "react-router-dom": "^7.5.0",
-    "ui": "github:shadcn/ui"
+    "react-router-dom": "^7.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
-    "@types/jest": "^29.5.14",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
-    "@vitejs/plugin-react": "^4.3.4",
+    "@tailwindcss/postcss": "^4.1.5",
     "autoprefixer": "^10.4.21",
     "depcheck": "^1.4.3",
     "eslint": "^9.21.0",
-    "eslint-config-prettier": "^10.1.2",
-    "eslint-plugin-react": "^7.0.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
-    "eslint-plugin-tsdoc": "^0.4.0",
     "globals": "^15.15.0",
-    "jest": "^29.0.0",
     "postcss": "^8.5.3",
-    "prettier": "^3.0.0",
-    "tailwindcss": "^3.4.17",
-    "ts-jest": "^29.0.0",
+    "tailwindcss": "^3.4.1",
     "ts-prune": "^0.10.0",
     "typescript": "^5.0.0",
     "vite": "^6.2.0"
