Refactored DELETE User

--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ VITE_AUTH0_CLIENT_ID=cWyvoIKHMZZL7KhhU0LlZYFBzSbBywFJ
 VITE_AUTH0_AUDIENCE=https://cruise-viewer-api
 VITE_TRIP_DATA_URL=https://da389rkfiajdk.cloudfront.net/trip_list.json
 VITE_FALLBACK_IMAGE=https://da389rkfiajdk.cloudfront.net/favicon.jpg
+VITE_DEBUG_MODE=true
